# login-static-site

./: .gitignore  Dockerfile  README.md  email_list.txt  github_users.txt  pyproject.toml  render.yaml
.github/: workflow_publish_gh_pages_failure.md  workflow_publish_render_pages_failure.md
.github/workflows/: publish_gh_pages.yaml  publish_render_pages.yaml
_lixo/: old_pyproject.toml
docs/: .readthedocs.yaml  email_list.txt  index.md
site/: 404.html  email_list.txt  index.html
site/search/: search_index.json
