[project]
name = "integra-contador"
version = "0.1.0"
description = ""
authors = [
    {name = "Gabriel Dornas",email = "gabrielbdornas@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13.1,<4.0"
dependencies = [
    "mkdocs-material (>=9.6.5,<10.0.0)",
    "taskipy (>=1.14.1,<2.0.0)"
]

[tool.taskipy.tasks]
serve = { cmd = "mkdocs serve", help = "Starts server." }
deploy = { cmd = "mkdocs gh-deploy", help = "Deploy static files to gh-pages." }
docker_build = { cmd = "docker build --no-cache -t my-mkdocs-site .", help = "Builds docker image locally." }
docker_run = { cmd = "docker run --rm -p 8080:4180 my-mkdocs-site", help = "Runs docker container locally." }

[tool.poetry]
package-mode = false
