[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.1"
dependencies = []

[dependency-groups]
dev = [
    # https://pypi.org/project/notebook/
    'notebook>=7.4.5',
]
docs = [
    # https://pypi.org/project/mkdocs/
    'mkdocs>=1.6.1',
    # https://pypi.org/project/mkdocs-jupyter/
    'mkdocs-jupyter>=0.25.1',
    # https://pypi.org/project/mkdocs-material/
    'mkdocs-material[imaging]>=9.6.20',
]
